# coin-lib

./: CMakeLists.txt  README.md  main.cpp
osi/include/: CglBKClique.hpp  CoinUtilsConfig.h  OsiSymConfig.hpp  SymConfig.h
osi/lib/: libCgl.la  libCgl.so.0  libClp.la  libClp.so.0  libCoinUtils.la  libCoinUtils.so.0  libOsi.la  libOsi.so.0.0.0  libOsiClp.la  libOsiClp.so.0.0.0  libOsiCommonTest.la  libOsiCommonTest.so.0.0.0  libOsiGlpk.la  libOsiGlpk.so.0.0.0  libOsiSym.la  libSym.la  libcoinglpk.la
osi/lib/pkgconfig/: cgl.pc  clp.pc  coindatanetlib.pc  coindatasample.pc  coinglpk.pc  coinutils.pc  hiredis.pc  libevent_openssl.pc  osi-clp.pc  osi-glpk.pc  osi-sym.pc  osi-unittests.pc  osi.pc  symphony-app.pc  symphony.pc
